--- a/frontend.html
+++ b/frontend.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396618-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698403443-senior-front-end-developer'>McFadyen Digital Senior Front-end Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396618-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Vietnam</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -74,7 +78,7 @@
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vroom/10fcb142-79d5-4a88-854e-c3b9e7a9b35b'>Vroom - Engineering Manager - Front End (React)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vroom/10fcb142-79d5-4a88-854e-c3b9e7a9b35b'>Vroom - Engineering Manager - Front End (React)</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -82,7 +86,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://shijigroup.join.com/jobs/461187-front-end-developer'>Job @ Shiji (Faro): Front End Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/461187-front-end-developer'>Job @ Shiji (Faro): Front End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://vodastra.applytojob.com/apply/tLKc3hkCgB/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/tLKc3hkCgB/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC  Charlotte</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -134,11 +138,11 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jkweb.join.com/jobs/460224-web-entwickler-frontend-60-100'>Job @ JKweb (Z?rich): Web Entwickler Frontend 60 -... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jkweb.join.com/jobs/460224-web-entwickler-frontend-60-100'>Job @ JKweb (Z?rich): Web Entwickler Frontend 60 -... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/DHbmxDnxN7/Front-End-Engineer'>Front End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/DHbmxDnxN7/Front-End-Engineer'>Front End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -156,11 +160,11 @@
 <p><span class="badge badge-light">North America North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/oaPmbfwg'>Internet Brands Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oaPmbfwg'>Internet Brands Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Miratech1/743999698051706-front-end-developer'>Miratech Front-End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Miratech1/743999698051706-front-end-developer'>Miratech Front-End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -168,7 +172,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/graphcore/jobs/4195280002'>Job Application for Analysis Tools Frontend Engineer at Graphcore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphcore/jobs/4195280002'>Job Application for Analysis Tools Frontend Engineer at Graphcore</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -254,11 +258,11 @@
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://liqid.join.com/jobs/462086-senior-frontend-developer-m-f-d'>Job @ LIQID Investments (Berlin): Senior Frontend ... | JOIN</a></h5> 
+<h5><a href='https://liqid.join.com/jobs/462086-senior-frontend-developer-m-f-d'>Job @ LIQID Investments (Berlin): Senior Frontend ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/o8Tqbfwm'>TeamViewer Global Careers - Senior Frontend Developer (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/o8Tqbfwm'>TeamViewer Global Careers - Senior Frontend Developer (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -308,7 +312,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -384,11 +388,11 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698242957-senior-frontend-developer-m-f-x-'>Netcentric Senior Frontend Developer (m/f/x) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698242957-senior-frontend-developer-m-f-x-'>Netcentric Senior Frontend Developer (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241258-senior-frontend-software-engineer'>Netcentric Senior Frontend Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241258-senior-frontend-software-engineer'>Netcentric Senior Frontend Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -449,10 +453,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <h5><a href='https://coinjobs.org/job/frontend-developer-m-f-d-at-zf-car-ewallet-gmbh/'>Frontend Developer (m/f/d) at ZF Car eWallet GmbH ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://homeday.join.com/jobs/448364-senior-frontend-engineer-m-w-x'>Job @ Homeday (Berlin): (Senior) Frontend Engineer... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
-<p>Posted on: 2019-10-27</p>
 <hr/>
 
 
